--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1"
+    "eslint-plugin-promise": "^4.0.1",
+    "mocha": "^6.0.2"
   },
   "private": true
 }
